5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1573_1559.log
== SUBMITION (2019-03-11 15:49:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(upper((frase.???))
-- EXECUTION TIME:
0.212308
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(upper((frase.???))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(upper(frase.???))
-- EXECUTION TIME:
0.147829
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(upper(frase.???))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:52:04) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase.???))
-- EXECUTION TIME:
0.204798
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(.upper(frase.???))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:00:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper())
-- EXECUTION TIME:
0.144816
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(.upper())
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:01:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase))
-- EXECUTION TIME:
0.17638
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:05:42) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.175785
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
